<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/SF_common"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SF_show_help_buttons" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SF_show_cards_balance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/SF_push_settings"/>

    <CheckBox
        android:id="@+id/settings_cbPushAnalyze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SF_push_switch" />

    <CheckBox
        android:id="@+id/settings_cbPushAnalyzeMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SF_push_about_push" />

    <Button
        android:id="@+id/settings_btnCheckService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/SF_push_service_start" />

    <Button
        android:id="@+id/settings_btnOpenSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/SF_push_access_get" />


    <Button
        android:id="@+id/settings_btnStartPush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/SF_push_parsers_title" />

    <Button
        android:id="@+id/settings_btnStartnotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/SF_last_push_list" />

    <Button
        android:id="@+id/settings_btnCreateP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:text="create test push" />

    <Button
        android:id="@+id/settings_btnStartLinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/SF_links_title" />

</LinearLayout>