<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CategoryActivity">

        <Switch
            android:id="@+id/category_sExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:checked="true"
            android:showText="true"
            android:splitTrack="false"
            android:text="@string/CA_type_of_category"
            android:textOff="@string/CA_switch_income"
            android:textOn="@string/CA_switch_expense"
            android:textSize="16sp"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_track"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />

        <ImageView
            android:id="@+id/category_btnDelete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_ui_delete"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:visibility="invisible"
            android:contentDescription="@string/btn_delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <CheckBox
            android:id="@+id/category_cbOnCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:checked="true"
            android:text="@string/CA_category_switch"
            app:layout_constraintStart_toStartOf="@id/category_sExpense"
            app:layout_constraintTop_toBottomOf="@id/category_sExpense"
            />

        <EditText
            android:id="@+id/category_etCategoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="35dp"
            android:hint="@string/CA_title_category"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_cbOnCategory"
            android:autofillHints="" />

        <View
            android:id="@+id/category_divider1"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/category_etCategoryName"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/category_tvSelIconText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@id/category_etCategoryName"
            app:layout_constraintTop_toBottomOf="@id/category_divider1"
            android:text="@string/CA_selIcon" />

        <ImageView
            android:id="@+id/category_ivSelIconImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/ic_cat_system"
            android:contentDescription="@string/CA_selIcon"
            app:layout_constraintStart_toEndOf="@id/category_tvSelIconText"
            app:layout_constraintTop_toBottomOf="@id/category_divider1"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/category_rvCategoriesGrid"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            app:layout_constraintTop_toBottomOf="@id/category_tvSelIconText"/>

        <View
            android:id="@+id/category_divider2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/category_rvCategoriesGrid"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/category_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_ok"
            app:layout_constraintEnd_toStartOf="@+id/category_centerPoint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/category_divider2" />

        <View
            android:id="@+id/category_centerPoint"
            android:layout_width="0.1dp"
            android:layout_height="40dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toTopOf="@id/category_btn_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/category_btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            app:layout_constraintBaseline_toBaselineOf="@id/category_btn_ok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/category_centerPoint" />

    </androidx.constraintlayout.widget.ConstraintLayout>