<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/itemTwo_item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cards"
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/itemTwo_centerPoint"
        android:layout_width="10dp"
        android:layout_height="5dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/itemTwo_item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TA_value"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/itemTwo_centerPoint"
        />

    <ImageView
        android:id="@+id/itemTwo_ivDelete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_ui_delete"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/btn_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>